--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hono-vue-ts-cloudflare-workers",
   "scripts": {
     "dev": "wrangler dev",
+    "build:frontend": "cd frontend && npm run build",
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
